# juego

./: CMakeLists.txt  aleatorio.cpp  config.h  constantes.cpp  constantes.h  game.cpp  game.h  ganaste.cpp  ganaste.h  intro.cpp  intro.h  juego.cpp  juego.h  main.cpp  mal.cpp  mal.h  questions.cpp  questions.h  tiempo.cpp  tiempo.h  utils.cpp  utils.h
